syntax = "proto3";

option csharp_namespace = "Preprocessing";

service PreprocessingService {
  rpc Preprocess (PreprocessRequest) returns (PreprocessReply);
}

message PreprocessRequest {
  string rawData = 1;
}

message PreprocessReply {
  string normalizedData = 1;
}